# mutCaller

./: Cargo.toml  EXAMPLES.md  README.md
scripts/: addTag.py
src/: cli.yml  main.rs  vcf.rs
src/countbam/: mod.rs
src/mutcaller/: mod.rs
tests/: breaksit_jmml.bam  breaksit_jmml.bam.bai  lr.bam.bai  truevalues_indel.txt  variants.tsv  variants_cb_sniffer.tsv  variants_indel.tsv  variants_jmml.tsv
